--- a/DEMO/pom.xml
+++ b/DEMO/pom.xml
@@ -55,39 +55,32 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>3.0.0-M1</version>
-
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.6.0</version>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M4</version>
+				<version>2.19.1</version>
 				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>${xmlFiles}</suiteXmlFile>
-					</suiteXmlFiles>
 					<systemPropertyVariables>
-						<appURL>${url}</appURL>
+						<userName>${DuserName}</userName>
+						<password>${Dpassword}</password>
+						<implicitWait>${DimplicitWait}</implicitWait>
+						<explicitWait>${DexplicitWait}</explicitWait>
 					</systemPropertyVariables>
+					<!-- Old design where we can hard code TestNG suite in pom.xml -->
+					<!-- <suiteXmlFiles> <suiteXmlFile>src/main/resources/testSuite/regression.xml</suiteXmlFile> 
+						<suiteXmlFile>testNG.xml</suiteXmlFile> </suiteXmlFiles> -->
+					<suiteXmlFiles>
+						<suiteXmlFile>TEST_SUITE\testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 		</plugins>
-
 	</build>
   <description>																																			</description>
 </project>
