--- a/DEMO/.project
+++ b/DEMO/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DEMO</name>
+	<name>Sample_Build</name>
 	<comment></comment>
 	<projects>
 	</projects>
