--- a/DEMO/pom.xml
+++ b/DEMO/pom.xml
@@ -78,6 +78,7 @@
 					<suiteXmlFiles>
 						<suiteXmlFile>TEST_SUITE\testng.xml</suiteXmlFile>
 						<suiteXmlFile>TEST_SUITE\Basic.xml</suiteXmlFile>
+						<suiteXmlFile>TEST_SUITE\Logintestng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
